Added thead for the tables

--- a/src/app/directory/directory-data/directory-data.component.html
+++ b/src/app/directory/directory-data/directory-data.component.html
@@ -2,6 +2,14 @@
   <h1>Comité ejecutivo</h1>
   <div>
     <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Cargo</th>
+          <th>Institución</th>
+          <th>Correo</th>
+        </tr>
+      </thead>
       <tbody>
         @for (person of Comite; track person){
         <tr>
@@ -18,6 +26,14 @@
   <h1>Mesa de primera respuesta</h1>
   <div>
     <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Cargo</th>
+          <th>Institución</th>
+          <th>Correo</th>
+        </tr>
+      </thead>
       <tbody>
         @for (person of MesaPrimeraRespuesta; track person){
         <tr>
@@ -34,6 +50,14 @@
   <h1>Mesa de Salud, Agua y Saneamiento</h1>
   <div>
     <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Cargo</th>
+          <th>Institución</th>
+          <th>Correo</th>
+        </tr>
+      </thead>
       <tbody>
         @for (person of MesaSaludAguaSanamiento; track person){
         <tr>
@@ -51,6 +75,14 @@
   <h1>Mesa de Infraestructura y Servicios</h1>
   <div>
     <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Cargo</th>
+          <th>Institución</th>
+          <th>Correo</th>
+        </tr>
+      </thead>
       <tbody>
         @for (person of MesaInfraServicios; track person){
         <tr>
@@ -68,6 +100,14 @@
   <h1>Mesa Social y Protección Humanitaria</h1>
   <div>
     <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Cargo</th>
+          <th>Institución</th>
+          <th>Correo</th>
+        </tr>
+      </thead>
       <tbody>
         @for (person of MesaSocialProHumanitaria; track person){
         <tr>
