Basic styles changes

--- a/src/app/home/home-header/home-header.component.html
+++ b/src/app/home/home-header/home-header.component.html
@@ -3,8 +3,7 @@
     <img src="https://munidegolfito.go.cr/images/2021/07/22/puntarenitas22001.jpg" alt="Background Image">
   </div>
   <div class="hero-text">
-    <h2>Conoce más sobre</h2>
-    <h1>Comités Comunales de Emergencias</h1>
-    <h2>en el cantón de Golfito</h2>
+    <h2>Conoce más sobre el<i class="fa fa-ellipsis-h" aria-hidden="true"></i></h2>
+    <h1>Comité Municipal de Emergencias</h1>
   </div>
 </section>
