--- a/src/app/home/home-header/home-header.component.css
+++ b/src/app/home/home-header/home-header.component.css
@@ -26,6 +26,7 @@
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   padding: 20px;
   box-sizing: border-box;
+  margin-bottom: 30rem;
 }
 
 h1, h2, h3 {
@@ -35,41 +36,51 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 5rem;
   font-weight: 700;
   text-transform: uppercase;
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 500;
   text-transform: none;
 }
 
 @media (max-width: 1200px) {
   h1 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
   h2 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
+  .hero-text {
+    margin-bottom: 0;
+  }
+
 }
 
 @media (max-width: 768px) {
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  .hero-text {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 480px) {
   h1 {
     font-size: 2.5rem;
   }
   h2 {
     font-size: 2rem;
   }
-}
-
-@media (max-width: 480px) {
-  h1 {
-    font-size: 1.6rem;
-  }
-  h2 {
-    font-size: 1.4rem;
+  .hero-text {
+    margin-bottom: 0;
   }
 }
 
