--- a/src/app/menu-mobile/menu-mobile.component.html
+++ b/src/app/menu-mobile/menu-mobile.component.html
@@ -3,13 +3,12 @@
     <section>
       <img src="../../assets/img/escudo1.gif" alt="Logo de la municipalidad de Golfito">
     </section>
-    <input type="text" placeholder="Buscar" name="search">
   </div>
   <nav>
     <span routerLink='/dashboard' routerLinkActive='active'>Inicio</span>
-    <span routerLink='/cce' routerLinkActive='active'>Comité Comunal</span>
+    <span routerLink='/cce' routerLinkActive='active'>Comités Comunales</span>
     <span routerLink='/albergues' routerLinkActive='active'>Albergues</span>
-    <span routerLink='/directorio' routerLinkActive='active'>Directorio</span>
+    <span routerLink='/directorio' routerLinkActive='active'>Comité Municipal</span>
     <span routerLink='/acerca' routerLinkActive='active'>Acerca de</span>
   </nav>
 </main>
