Added new organizative structure for CCE

--- a/src/app/cce/cce-map/cce-map.component.html
+++ b/src/app/cce/cce-map/cce-map.component.html
@@ -1,55 +1,62 @@
 <nav>
   @if (carousel == 0){
-  <button class="back disabled" disabled (click)="navigateCarousel(-1)" value="<">{{"<"}}</button>
+  <button
+    class="back disabled"
+    disabled
+    (click)="navigateCarousel(-1)"
+    value="<"
+  >
+    {{ "<" }}
+  </button>
   } @else{
-      <button class="back" (click)="navigateCarousel(-1)" value="<">{{"<"}}</button>
-  }
-  @for (place of places.slice(carousel, carousel + 4); track place){
-    @if( place.id == places[currentPlace].id){
+  <button class="back" (click)="navigateCarousel(-1)" value="<">
+    {{ "<" }}
+  </button>
+  } @for (place of places.slice(carousel, carousel + 4); track place){ @if(
+  place.id == places[currentPlace].id){
 
-    <span class="selected" (click)="setCurrentPlace(place.id)">{{place.name}}</span>
+  <span class="selected" (click)="setCurrentPlace(place.id)">{{
+    place.name
+  }}</span>
   } @else{
 
-    <span (click)="setCurrentPlace(place.id)">{{place.name}}</span>
-  }
-  }
-  @if (carousel == places.length - 4){
-    <button class="forward disabled" disabled (click)="navigateCarousel(1)" value="<">{{">"}}</button>
+  <span (click)="setCurrentPlace(place.id)">{{ place.name }}</span>
+  } } @if (carousel == places.length - 4){
+  <button
+    class="forward disabled"
+    disabled
+    (click)="navigateCarousel(1)"
+    value="<"
+  >
+    {{ ">" }}
+  </button>
   } @else{
-  <button class="forward" (click)="navigateCarousel(1)" value="<">{{">"}}</button>
+  <button class="forward" (click)="navigateCarousel(1)" value="<">
+    {{ ">" }}
+  </button>
   }
 </nav>
-<div [innerHTML]=places[currentPlace].ubication></div>
+<div [innerHTML]="places[currentPlace].ubication"></div>
 <section>
-<table>
-  <thead>
-    <tr>
-      <td>Cargo</td>
-      <td>Nombre</td>
-      <td>Email</td>
-    </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td colspan="3" class="title">Comité ejecutivo</td>
-  </tr>
-  @for (person of places[currentPlace].committee; track person){
-  <tr>
-    <td class="job">{{person.job}}</td>
-    <td>{{person.name}}</td>
-    <td>{{person.email}}</td>
-  </tr>
-  }
-  <tr>
-    <td colspan="3" class="title">Equipo de trabajo</td>
-  </tr>
-  @for (person of places[currentPlace].workTeam; track person){
-  <tr>
-    <td class="job">{{person.job}}</td>
-    <td>{{person.name}}</td>
-    <td>{{person.email}}</td>  </tr>
-  }
-  </tbody>
-
-</table>
+  <table>
+    <thead>
+      <tr>
+        <td>Cargo</td>
+        <td>Nombre</td>
+        <td>Email</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td colspan="3" class="title">Comité ejecutivo</td>
+      </tr>
+      @for (person of places[currentPlace].committee; track person){
+      <tr>
+        <td class="job">{{ person.job }}</td>
+        <td>{{ person.name }}</td>
+        <td>{{ person.email }}</td>
+      </tr>
+      }
+    </tbody>
+  </table>
 </section>
