--- a/src/app/about/about-geography/about-geography.component.html
+++ b/src/app/about/about-geography/about-geography.component.html
@@ -1,18 +1,24 @@
 <article class="main__content__about">
   <div class="__body__about">
     <div class="__img">
-      <img src="../../../assets/img/home/RotuloGolfito.webp" alt="Rotulo Golfito, parque central">
+      <img
+        src="../../../assets/img/home/RotuloGolfito.webp"
+        alt="Rotulo Golfito, parque central"
+      />
     </div>
     <div class="__text">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis ipsum eu aliquam aliquet. Nam sapien
-        leo, viverra vitae mi et, convallis suscipit neque. Nullam sem quam, mollis a ex ac, elementum aliquam velit.
-        Morbi bibendum neque id ipsum porttitor bibendum. Mauris pharetra ullamcorper lorem ac cursus. Praesent nec quam
-        eu velit dictum pretium. Integer auctor accumsan enim, sit amet pulvinar augue vestibulum sagittis. Curabitur
-        commodo molestie justo quis dictum. Cras a efficitur nibh. <br>
-        Morbi bibendum neque id ipsum porttitor bibendum. Mauris pharetra ullamcorper lorem ac cursus. Praesent nec quam
-        eu velit dictum pretium. Integer auctor accumsan enim, sit amet pulvinar augue vestibulum sagittis. Curabitur
-        commodo molestie justo quis dictum. Cras a efficitur nibh. </p>
+        La Comisión Nacional de Prevención de Riesgos y Atención de Emergencias
+        (CNE) en el cantón de Golfito es la entidad responsable de coordinar y
+        ejecutar acciones para la prevención y atención de emergencias en esta
+        región. 
+      </p>
+      <p>
+        Trabajamos en conjunto con instituciones públicas, privadas,
+        organizaciones no gubernamentales y la comunidad para proteger a los
+        habitantes de Golfito y reducir el impacto de desastres naturales y
+        otras situaciones de riesgo.
+      </p>
     </div>
   </div>
 </article>
