--- a/src/app/home/home-aboutme/home-aboutme.component.css
+++ b/src/app/home/home-aboutme/home-aboutme.component.css
@@ -51,8 +51,6 @@
   min-height: 15rem;
   height: auto;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-wrap: wrap;
   font-size: 2rem;
   font-weight: 400;
@@ -64,7 +62,7 @@
 
 .__text p {
   width: 100%;
-  text-align: center;
+  text-align: left;
   margin: 0;
 }
 
