--- a/src/app/admin/signup/signup.component.html
+++ b/src/app/admin/signup/signup.component.html
@@ -1,25 +1,40 @@
-<div class="login-container">
-    <div class="login-form">
-      <div class="escudo">
-        <img src="../../../assets/img/Login/Login.png" alt="Escudo" />
-      </div>
-      <form class="form" (ngSubmit)="onSubmit()">
-        <h2>Iniciar Sesión</h2>
-        <div class="form-group">
-          <label for="correo">Correo:</label>
-          <input id="correo" formControlName="correo" type="email" placeholder="Usuario" />
-        </div>
-        <div class="form-group">
-          <label for="contrasena">Contraseña:</label>
-          <input id="contrasena" formControlName="contrasena" type="password" placeholder="Contraseña" />
-        </div>
-        <div class="form-remenber ">
-          <input type="checkbox" id="recordar" formControlName="recordar" />
-          <label for="recordar">Recordar usuario</label>
-        </div>
-        <button type="submit" [disabled]="!loginForm.valid">Ingresar</button>
-        <a href="#" class="forgot-password">¿Se te olvidó la contraseña?</a>
-      </form>
+<div class="registro-container">
+  <div class="registro-form">
+    <div class="escudo">
+        <img src="../../../assets/img/Login/Login.png" alt="Escudo"  />
     </div>
+    <form class="form"  (ngSubmit)="onSubmit()">
+        <h2>Crear Nueva Cuenta</h2>
+      <div class="form-group">
+        <label for="nombre">Nombre</label>
+        <input
+          id="nombre"
+          formControlName="nombre"
+          type="text"
+          placeholder="Tu nombre"
+        />
+      </div>
+      <div class="form-group">
+        <label for="correo">Correo</label>
+        <input
+          id="correo"
+          formControlName="correo"
+          type="email"
+          placeholder="Tu correo"
+        />
+      </div>
+      <div class="form-group">
+        <label for="contrasena">Contraseña</label>
+        <input
+          id="contrasena"
+          formControlName="contrasena"
+          type="password"
+          placeholder="Contraseña"
+        />
+      </div>
+      <button type="submit" [disabled]="!registroForm.valid">
+        Registrarse
+      </button>
+    </form>
   </div>
-  
+</div>
