--- a/src/app/admin/users/users.component.css
+++ b/src/app/admin/users/users.component.css
@@ -31,7 +31,7 @@ section {
   padding-top: 2rem;
 }
 
-.search{
+.search {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -90,7 +90,7 @@ table td button {
   border-radius: 4px;
   cursor: pointer;
 }
-.actions-button{
+.actions-button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,7 +104,6 @@ table td button img {
 table td button:hover {
   background-color: #ddd;
 }
-
 
 .modal {
   position: fixed;
@@ -127,4 +126,49 @@ table td button:hover {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
+}
+
+.modal h3 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.modal p {
+  font-size: 1.2rem;
+}
+
+.modal label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.modal input,
+.modal select {
+  width: 25rem;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 2rem;
+}
+
+.modal-buttons button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-buttons button:first-child {
+  background-color: #00cc66;
+  color: white;
+}
+
+.modal-buttons button:last-child {
+  background-color: #ccc;
 }
