--- a/src/app/admin/users/users.component.css
+++ b/src/app/admin/users/users.component.css
@@ -172,3 +172,10 @@ table td button:hover {
 .modal-buttons button:last-child {
   background-color: #ccc;
 }
+
+.error {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
